@@ -1,5 +1,5 @@
 
-#include <aim.h>
+#include <faim/aim.h>
 
 /*
  * aim_add_buddy()
