@@ -10,12 +10,12 @@
 #include <faim/aim.h>
 /* #include <aim_buildcode.h> /* generated by mkbuildinfo.sh */
 
-long long aim_getbuilddate(void)
+char *aim_getbuilddate(void)
 {
   return AIM_BUILDDATE;
 }
 
-long long aim_getbuildtime(void)
+char *aim_getbuildtime(void)
 {
   return AIM_BUILDTIME;
 }
@@ -24,7 +24,7 @@ char *aim_getbuildstring(void)
 {
   static char string[100];
 
-  snprintf(string, 99, "%d.%d.%d-%Ld%Ld", 
+  snprintf(string, 99, "%d.%d.%d-%s%s", 
 	   FAIM_VERSION_MAJOR,
 	   FAIM_VERSION_MINOR,
 	   FAIM_VERSION_MINORMINOR,
